# automatic-usb-mains-switch

./: CMakeLists.txt  README.md  burn.sh
libs-device/: osccal.c
src/: main.cpp  usbconfig.h
usbdrv/: usbdrv.c  usbdrv.h
